--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -18,3 +18,16 @@ web:
           index: ["index.html"]
           # Allow files even without specified rules.
           allow: true
+    
+dependencies:
+    nodejs:
+        sharp: "*"
+    
+hooks:
+    build: |
+        npm run setup-assets
+        npm run build        
+
+web:
+    commands:
+        start: node index.js
